leftover replacements of KheperaIV

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,16 +2,16 @@
 # Place the files
 #
 #   poky-glibc-*.sh
-#   libkhepera-*.tar.bz2
+#   libturtlebot3-*.tar.bz2
 #
 # in the same folder as this file. They can be downloaded from
 #
-#   https://ftp.k-team.com/KheperaIV/software/Gumstix%20COM%20Y/light_tools/
-#   https://ftp.k-team.com/KheperaIV/software/Gumstix%20COM%20Y/library/
+#   https://ftp.k-team.com/Turtlebot3/software/Gumstix%20COM%20Y/light_tools/
+#   https://ftp.k-team.com/Turtlebot3/software/Gumstix%20COM%20Y/library/
 #
 # Then build the image with
 #
-# docker build -t nestlab/kheperaiv .
+# docker build -t nestlab/turtlebot3 .
 #
 # Run the image with
 #
@@ -19,7 +19,7 @@
 #
 # If you want to share local folders with the virtual machine, use this command:
 #
-# docker run -it -v /host/directory:/container/directory nestlab/kheperaiv bash -l
+# docker run -it -v /host/directory:/container/directory nestlab/turtlebot3 bash -l
 #
 # where /host/directory is a directory in your machine, and /container/directory is
 # a directory in the container.
@@ -33,7 +33,7 @@ WORKDIR /work
 
 # Copy the contents of the current directory in /work
 COPY poky-glibc-*.sh .
-COPY libkhepera-*.tar.bz2 .
+COPY libturtlebot3-*.tar.bz2 .
 
 # Install needed packages
 RUN apt-get update && \
@@ -49,22 +49,22 @@ RUN apt-get update && \
 	python
 
 # Install light toolchain
-RUN bash poky-glibc-i686-khepera4-image-cortexa8hf-vfp-neon-toolchain-1.8.sh && \
+RUN bash poky-glibc-i686-turtlebot34-image-cortexa8hf-vfp-neon-toolchain-1.8.sh && \
   ( echo "source /opt/poky/1.8/environment-setup-cortexa8hf-vfp-neon-poky-linux-gnueabi" >> /root/.bashrc )
 
-# Install libkhepera
-ENV ARGOS3KHIV /opt/poky/1.8/sysroots/cortexa8hf-vfp-neon-poky-linux-gnueabi/usr
-RUN tar xjf libkhepera-*.tar.bz2 && \
-  rm -f libkhepera-*.tar.bz2 && \
-  cd libkhepera-* && \
+# Install libturtlebot3
+ENV ARGOS3tb3 /opt/poky/1.8/sysroots/cortexa8hf-vfp-neon-poky-linux-gnueabi/usr
+RUN tar xjf libturtlebot3-*.tar.bz2 && \
+  rm -f libturtlebot3-*.tar.bz2 && \
+  cd libturtlebot3-* && \
   make && \
-  mkdir -p $ARGOS3KHIV && \
-  cp -a build*/* $ARGOS3KHIV
+  mkdir -p $ARGOS3tb3 && \
+  cp -a build*/* $ARGOS3tb3
 
 # Get ARGoS and Buzz code
 RUN git clone https://github.com/ilpincy/argos3
 RUN git clone https://github.com/NESTLab/Buzz.git buzz
-RUN git clone https://github.com/ilpincy/argos3-kheperaiv
+RUN git clone https://github.com/ilpincy/argos3-turtlebot3
 
 # Make sure the toolchain configuration is in the environment
 SHELL ["/bin/bash", "-c"]
@@ -72,23 +72,23 @@ ENV BASH_ENV /opt/poky/1.8/environment-setup-cortexa8hf-vfp-neon-poky-linux-gnue
 
 # Compile and install ARGoS
 RUN cd argos3 && \
-  mkdir build_kheperaiv && \
-  cd build_kheperaiv && \
-  cmake -DARGOS_BUILD_FOR=khiv ../src -DCMAKE_TOOLCHAIN_FILE=../../argos3-kheperaiv/src/cmake/TargetKheperaIV.cmake -DCMAKE_INSTALL_PREFIX=$ARGOS3KHIV && \
+  mkdir build_turtlebot3 && \
+  cd build_turtlebot3 && \
+  cmake -DARGOS_BUILD_FOR=tb3 ../src -DCMAKE_TOOLCHAIN_FILE=../../argos3-turtlebot3/src/cmake/TargetTurtlebot3.cmake -DCMAKE_INSTALL_PREFIX=$ARGOS3tb3 && \
   make install
 
 # Compile and install Buzz
 RUN cd buzz && \
-  mkdir build_kheperaiv && \
-  cd build_kheperaiv && \
-  cmake -DARGOS_BUILD_FOR=khiv -DCMAKE_TOOLCHAIN_FILE=../../argos3-kheperaiv/src/cmake/TargetKheperaIV.cmake -DCMAKE_INSTALL_PREFIX=$ARGOS3KHIV ../src && \
+  mkdir build_turtlebot3 && \
+  cd build_turtlebot3 && \
+  cmake -DARGOS_BUILD_FOR=tb3 -DCMAKE_TOOLCHAIN_FILE=../../argos3-turtlebot3/src/cmake/TargetTurtlebot3.cmake -DCMAKE_INSTALL_PREFIX=$ARGOS3tb3 ../src && \
   make install
 
-# Compile and install ARGoS-KheperaIV
-RUN cd argos3-kheperaiv && \
-  mkdir build_kheperaiv && \
-  cd build_kheperaiv && \
-  cmake -DARGOS_BUILD_FOR=khiv -DCMAKE_TOOLCHAIN_FILE=../src/cmake/TargetKheperaIV.cmake -DCMAKE_INSTALL_PREFIX=$ARGOS3KHIV -DKHEPERAIV_LIBS=$ARGOS3KHIV ../src && \
+# Compile and install ARGoS-Turtlebot3
+RUN cd argos3-turtlebot3 && \
+  mkdir build_turtlebot3 && \
+  cd build_turtlebot3 && \
+  cmake -DARGOS_BUILD_FOR=tb3 -DCMAKE_TOOLCHAIN_FILE=../src/cmake/TargetTurtlebot3.cmake -DCMAKE_INSTALL_PREFIX=$ARGOS3tb3 -DTURTLEBOT3_LIBS=$ARGOS3tb3 ../src && \
   make install
 
 # # Cleanup
