--- a/src/plugins/robots/turtlebot3/CMakeLists.txt
+++ b/src/plugins/robots/turtlebot3/CMakeLists.txt
@@ -3,13 +3,9 @@
 #
 # argos3/plugins/robots/turtlebot3/control_interface
 set(ARGOS3_HEADERS_PLUGINS_ROBOTS_TURTLEBOT3_CONTROLINTERFACE
-  control_interface/ci_turtlebot3_camera_sensor.h
   control_interface/ci_turtlebot3_encoder_sensor.h
-  control_interface/ci_turtlebot3_ground_sensor.h
   control_interface/ci_turtlebot3_lidar_sensor.h
-  control_interface/ci_turtlebot3_light_sensor.h
-  control_interface/ci_turtlebot3_proximity_sensor.h
-  control_interface/ci_turtlebot3_ultrasound_sensor.h)
+  control_interface/ci_turtlebot3_proximity_sensor.h)
 if(BUZZ_FOUND)
   set(ARGOS3_HEADERS_PLUGINS_ROBOTS_TURTLEBOT3_CONTROLINTERFACE
     ${ARGOS3_HEADERS_PLUGINS_ROBOTS_TURTLEBOT3_CONTROLINTERFACE}
@@ -20,43 +16,36 @@ if(ARGOS_BUILD_FOR_SIMULATOR)
   set(ARGOS3_HEADERS_PLUGINS_ROBOTS_TURTLEBOT3_SIMULATOR
     simulator/dynamics2d_turtlebot3_model.h
     simulator/turtlebot3_entity.h
-    simulator/turtlebot3_light_rotzonly_sensor.h
     simulator/turtlebot3_measures.h
-    simulator/turtlebot3_ground_rotzonly_sensor.h
     simulator/turtlebot3_lidar_default_sensor.h
-    simulator/turtlebot3_proximity_default_sensor.h
-    simulator/turtlebot3_ultrasound_default_sensor.h)
+    simulator/turtlebot3_proximity_default_sensor.h)
 endif(ARGOS_BUILD_FOR_SIMULATOR)
 # argos3/plugins/robots/turtlebot3/real_robot
-if(ARGOS_BUILD_FOR STREQUAL "tb3")
-  set(ARGOS3_HEADERS_PLUGINS_ROBOTS_TURTLEBOT3_REALROBOT
-    real_robot/real_turtlebot3.h
-    real_robot/real_turtlebot3_device.h
-    real_robot/real_turtlebot3_differential_steering_device.h
-    real_robot/real_turtlebot3_differential_steering_actuator.h
-    #real_robot/real_turtlebot3_gripper_actuator.h
-    real_robot/real_turtlebot3_leds_actuator.h
-    real_robot/real_turtlebot3_battery_sensor.h
-    real_robot/real_turtlebot3_camera_sensor.h
-    real_robot/real_turtlebot3_encoder_sensor.h
-    real_robot/real_turtlebot3_ground_sensor.h
-    real_robot/real_turtlebot3_lidar_sensor.h
-    real_robot/real_turtlebot3_proximity_sensor.h
-    real_robot/real_turtlebot3_ultrasound_sensor.h)
-endif(ARGOS_BUILD_FOR STREQUAL "tb3")
+# if(ARGOS_BUILD_FOR STREQUAL "tb3")
+#   set(ARGOS3_HEADERS_PLUGINS_ROBOTS_TURTLEBOT3_REALROBOT
+#     real_robot/real_turtlebot3.h
+#     real_robot/real_turtlebot3_device.h
+#     real_robot/real_turtlebot3_differential_steering_device.h
+#     real_robot/real_turtlebot3_differential_steering_actuator.h
+#     #real_robot/real_turtlebot3_gripper_actuator.h
+#     real_robot/real_turtlebot3_leds_actuator.h
+#     real_robot/real_turtlebot3_battery_sensor.h
+#     real_robot/real_turtlebot3_camera_sensor.h
+#     real_robot/real_turtlebot3_encoder_sensor.h
+#     real_robot/real_turtlebot3_ground_sensor.h
+#     real_robot/real_turtlebot3_lidar_sensor.h
+#     real_robot/real_turtlebot3_proximity_sensor.h
+#     real_robot/real_turtlebot3_ultrasound_sensor.h)
+# endif(ARGOS_BUILD_FOR STREQUAL "tb3")
 
 #
 # turtlebot3 sources
 #
 set(ARGOS3_SOURCES_PLUGINS_ROBOTS_TURTLEBOT3
   ${ARGOS3_HEADERS_PLUGINS_ROBOTS_TURTLEBOT3_CONTROLINTERFACE}
-  control_interface/ci_turtlebot3_camera_sensor.cpp
   control_interface/ci_turtlebot3_encoder_sensor.cpp
-  control_interface/ci_turtlebot3_ground_sensor.cpp
   control_interface/ci_turtlebot3_lidar_sensor.cpp
-  control_interface/ci_turtlebot3_light_sensor.cpp
-  control_interface/ci_turtlebot3_proximity_sensor.cpp
-  control_interface/ci_turtlebot3_ultrasound_sensor.cpp)
+  control_interface/ci_turtlebot3_proximity_sensor.cpp)
 if(BUZZ_FOUND)
   set(ARGOS3_SOURCES_PLUGINS_ROBOTS_TURTLEBOT3
     ${ARGOS3_SOURCES_PLUGINS_ROBOTS_TURTLEBOT3}
@@ -69,12 +58,8 @@ if(ARGOS_BUILD_FOR_SIMULATOR)
     ${ARGOS3_HEADERS_PLUGINS_ROBOTS_TURTLEBOT3_SIMULATOR}
     simulator/dynamics2d_turtlebot3_model.cpp
     simulator/turtlebot3_entity.cpp
-    simulator/turtlebot3_light_rotzonly_sensor.cpp
     simulator/turtlebot3_measures.cpp
-    simulator/turtlebot3_ground_rotzonly_sensor.cpp
-    simulator/turtlebot3_lidar_default_sensor.cpp
-    simulator/turtlebot3_proximity_default_sensor.cpp
-    simulator/turtlebot3_ultrasound_default_sensor.cpp)
+    simulator/turtlebot3_lidar_default_sensor.cpp)
   # Compile the graphical visualization only if the necessary libraries have been found
   if(ARGOS_QTOPENGL_FOUND)
     include_directories(${ARGOS_QTOPENGL_INCLUDE_DIRS})
@@ -87,24 +72,24 @@ if(ARGOS_BUILD_FOR_SIMULATOR)
       simulator/qtopengl_turtlebot3.cpp)
   endif(ARGOS_QTOPENGL_FOUND)
 endif(ARGOS_BUILD_FOR_SIMULATOR)
-if(ARGOS_BUILD_FOR STREQUAL "tb3")
-  set(ARGOS3_SOURCES_PLUGINS_ROBOTS_TURTLEBOT3
-    ${ARGOS3_SOURCES_PLUGINS_ROBOTS_TURTLEBOT3}
-    ${ARGOS3_HEADERS_PLUGINS_ROBOTS_TURTLEBOT3_REALROBOT}
-    real_robot/real_turtlebot3.cpp
-    real_robot/real_turtlebot3_device.cpp
-    real_robot/real_turtlebot3_differential_steering_device.cpp
-    real_robot/real_turtlebot3_differential_steering_actuator.cpp
-    #real_robot/real_turtlebot3_gripper_actuator.cpp
-    real_robot/real_turtlebot3_leds_actuator.cpp
-    real_robot/real_turtlebot3_battery_sensor.cpp
-    real_robot/real_turtlebot3_camera_sensor.cpp
-    real_robot/real_turtlebot3_encoder_sensor.cpp
-    real_robot/real_turtlebot3_ground_sensor.cpp
-    real_robot/real_turtlebot3_lidar_sensor.cpp
-    real_robot/real_turtlebot3_proximity_sensor.cpp
-    real_robot/real_turtlebot3_ultrasound_sensor.cpp)
-endif(ARGOS_BUILD_FOR STREQUAL "tb3")
+# if(ARGOS_BUILD_FOR STREQUAL "tb3")
+#   set(ARGOS3_SOURCES_PLUGINS_ROBOTS_TURTLEBOT3
+#     ${ARGOS3_SOURCES_PLUGINS_ROBOTS_TURTLEBOT3}
+#     ${ARGOS3_HEADERS_PLUGINS_ROBOTS_TURTLEBOT3_REALROBOT}
+#     real_robot/real_turtlebot3.cpp
+#     real_robot/real_turtlebot3_device.cpp
+#     real_robot/real_turtlebot3_differential_steering_device.cpp
+#     real_robot/real_turtlebot3_differential_steering_actuator.cpp
+#     #real_robot/real_turtlebot3_gripper_actuator.cpp
+#     real_robot/real_turtlebot3_leds_actuator.cpp
+#     real_robot/real_turtlebot3_battery_sensor.cpp
+#     real_robot/real_turtlebot3_camera_sensor.cpp
+#     real_robot/real_turtlebot3_encoder_sensor.cpp
+#     real_robot/real_turtlebot3_ground_sensor.cpp
+#     real_robot/real_turtlebot3_lidar_sensor.cpp
+#     real_robot/real_turtlebot3_proximity_sensor.cpp
+#     real_robot/real_turtlebot3_ultrasound_sensor.cpp)
+# endif(ARGOS_BUILD_FOR STREQUAL "tb3")
 
 #
 # Create turtlebot3 plugin
